--- a/styles.css
+++ b/styles.css
@@ -25,6 +25,13 @@ body {
     grid-template-columns: repeat(3 , auto);
 }
 
+.board.x .cell:not(.x):not(.circle):hover::after,
+.board.x .cell:not(.x):not(.circle):hover::before,
+.board.circle .cell:not(.x):not(.circle):hover::after,
+.board.circle .cell:not(.x):not(.circle):hover::before {
+    background: rgba(255, 255, 255, 0.3) !important;
+}
+
 /*celula*/
 .cell {
     width: 100px;
@@ -33,6 +40,11 @@ body {
     display: flex;
     align-items: center;
     justify-content: center;
+}
+
+.cell.x,
+.cell.circle {
+    cursor: not-allowed;
 }
 
 .cell:nth-child(1),
@@ -62,7 +74,9 @@ body {
 /* X */
 
 .cell.x::before,
-.cell.x::after {
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover::after,
+.board.x .cell:not(.x):not(.circle):hover::before {
     content: "";
     height: calc(100px * 0.15);
     width: calc(100px * 0.9);
@@ -70,18 +84,22 @@ body {
     position: absolute;
 }
 
-.cell.x::before {
+.cell.x::before,
+.board.x .cell:not(.x):not(.circle):hover::before {
     transform: rotate(45deg);
 }
 
-.cell.x::after {
+.cell.x::after,
+.board.x .cell:not(.x):not(.circle):hover::after {
     transform: rotate(-45deg);
 }
 
 /* Circle */
 
 .cell.circle::before,
-.cell.circle::after {
+.cell.circle::after,
+.board.circle .cell:not(.x):not(.circle):hover::after,
+.board.circle .cell:not(.x):not(.circle):hover::before {
     content: "";
     height: calc(100px * 0.9);
     width: calc(100px * 0.9);
@@ -93,4 +111,34 @@ body {
 /* mensagem de vitoria */
 .winning-message {
     display: none;
+    position: fixed;
+    top: 0;
+    left: 0;
+    right: 0;
+    bottom: 0;
+    align-items: center;
+    justify-content: center;
+    background-color: rgba(0, 0, 0, 0.8);
+    flex-direction: column;
+}
+
+.winning-message-button {
+    font-size: 2.5rem;
+    background-color: rgba(65,185,131,1);
+    padding: 10px 15px;
+    cursor: pointer;
+    border-radius: 5px;
+    border: none;
+    margin-top: 16px;
+    color: white;
+}
+
+.winning-message-button:hover {
+    color: rgba(65,185,131,1);
+    background-color: white;
+}
+
+.winning-message-text {
+    color: white;
+    font-size: 5rem;
 }
